# pymcadp

./: .gitignore  README.md  pymcadp.e4p  pymcadp.leo  run.py
2017fall/: calculator.e4p  run.py
2017fall/_eric6project/: calculator.e4q  calculator.e6t
2017fall/cadp_marble_machine/: three_point_synthesis_design_calculation.py  three_point_synthesis_design_problem.slvs  three_point_synthesis_result.slvs
2017fall/mouse_key_event/: mouse_key_paint_event1.py  mouse_key_paint_event2.py  mouse_key_paint_event3.py  mouse_key_paint_event4.py  mouse_key_paint_event5.py  mouse_key_paint_event6.py
2017fall/onshape_video_assignment/: 2a_student_list.txt  2b_student_list.txt  assign_video.py
2017fall/qspinbox_and_qdial/: qspinbox_test.e4p  run.py
2017fall/ui/: Dialog.py  Dialog.ui  Ui_Dialog.py
_eric6project/: menu_dialog.e4q  menu_dialog.e6t  pymcadp.e4q  pymcadp.e4q-baseline  pymcadp.e4q-baseline-0  pymcadp.e4q-merge-0  pymcadp.e4q-original  pymcadp.e4q-original-0  pymcadp.e6t  pymcadp.e6t-baseline  pymcadp.e6t-baseline-0  pymcadp.e6t-merge  pymcadp.e6t-merge-0  pymcadp.e6t-original  pymcadp.e6t-original-0
blog/: archives.html  authors.html  brython-editor-331.html  categories.html  index.html  search.html  sitemap.xml  tags.html  tipuesearch_content.js  web-based-python3.html
blog/author/: yen.html
blog/category/: course.html
blog/feeds/: all.atom.xml  course.atom.xml
blog/tag/: brython.html
cad_2d/: Ui_cad_2d.py  cad_2d.py  cad_2d.ui
cadp/: box_no2.stl  box_no2.ttt  box_no2_temp.stl  marble_machine.slvs
calculator/: Ui_engr_calculator.py  Ui_simple_calculator.py  cal_ex1.py  engr_calculator.py  engr_calculator.ui  simple_calculator.py  simple_calculator.ui
calculator_flask/: requirements.txt
content/: 20170314.md
cpw10-12/: readme.md
currency_exchange/: currency_exchange.e4p  run.py
currency_exchange/_eric6project/: currency_exchange.e4q  currency_exchange.e6t
currency_exchange/ui/: Ui_dialog.py  dialog.py  dialog.ui
data/blender/: two-wheel-blender-script.py  two-wheel-cart.stl  two-wheel-cart.ttt
data/modern_robotics/: UR5_imported_csvplayer.ttt  YouBot_csv_with_wheels.ttt
data/nyu_el5223/: readme.txt
data/pyqt5/: animation1.py  animation2.py
data/qt5/qt5_ex1/: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  calculator.cpp  calculator.pro
data/qt5/qt5_ex1/release/: moc_button.cpp  moc_calculator.cpp
data/v-rep/automatic_control/v_repExtSDL/: CMakeLists.txt  README.md  callbacks.xml  plugin.cpp  plugin.h  test-sdl.ttt
data/v-rep/automatic_control/v_repExtSurfaceReconstruction/: CMakeLists.txt  README.md  callbacks.xml  license.txt  plugin.cpp  surface-reconstruction.ttt
design/: Ui_spur_gear_width.py  spur_gear_width.py  spur_gear_width.ui
main/: Ui_main.py  main.py  main.ui
paint/: Ui_paint.py  paint.py  paint.ui
pyqt5fit/: AdditionalInfo.py  CHANGELOG  README.txt  pdfCode.py  pickledEquationFile
text_calculator/: run.py  text_calculator.e4p
text_calculator/_eric6project/: calculator.e4q  calculator.e6t  text_calculator.e4q  text_calculator.e6t
text_calculator/ui/: Ui_dialog.py  dialog.py  (+1 more)
users/: yen.leo
utilities/: Ui_fossil_creator.py  Ui_graphics_viewer.py  Ui_grouping.py  fossil_creator.py  fossil_creator.ui  graphics_viewer.py  graphics_viewer.ui  grouping.py  grouping.ui
(+134 files in other folders)
